Disabled uppercase text transform for file and folder names

--- a/html/templates/settings-folder.html
+++ b/html/templates/settings-folder.html
@@ -3,7 +3,7 @@
         <div class="card-body">
             <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-uppercase mb-1" id="div-folder-name-{id}">{basename}</div>
+                    <div class="text-xs font-weight-bold mb-1" id="div-folder-name-{id}">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
                         <code id="code-folder-path-{id}">{path}</code>
                     </div>
