Implemented drag and drop folder arrangement in settings page

--- a/html/templates/settings-folder.html
+++ b/html/templates/settings-folder.html
@@ -5,7 +5,7 @@
                 <div class="col mr-2">
                     <div class="text-xs font-weight-bold mb-1" id="div-folder-name-{id}">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
-                        <code id="code-folder-path-{id}">{path}</code>
+                        <code class="folder-path" id="code-folder-path-{id}">{path}</code>
                     </div>
                 </div>
                 <div class="col-auto">
