--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -32,7 +32,10 @@
             <button type="button" id="btn-add-folder" class="btn btn-sm float-left btn-circle">
                 <i class="fas fa-plus"></i>
             </button>
-            <h6 class="pl-5 mt-2 font-weight-bold">Folders</h6>
+            <div class="col">
+                <h6 class="pl-5 mt-2 font-weight-bold">Folder 583</h6>
+                <i>drag and drop to sort</i>
+            </div>
         </div>
         <div class="card-body" id="folders">
         </div>
