--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -33,7 +33,7 @@
                 <i class="fas fa-plus"></i>
             </button>
             <div class="col">
-                <h6 class="pl-5 mt-2 font-weight-bold">Folder 583</h6>
+                <h6 class="pl-5 mt-2 font-weight-bold">Folders</h6>
                 <i>drag and drop to sort</i>
             </div>
         </div>
