Implemented drag handles for folders in settings page

--- a/html/templates/settings-folder.html
+++ b/html/templates/settings-folder.html
@@ -2,6 +2,7 @@
     <div class="card border-left-primary shadow h-100 py-2">
         <div class="card-body">
             <div class="row no-gutters align-items-center">
+                <div class="col-auto pe-2"> <i class="fas fa-grip-vertical drag-handle" style="cursor: grab;"></i> </div>
                 <div class="col mr-2">
                     <div class="text-xs font-weight-bold mb-1" id="div-folder-name-{id}">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
