Fixed issues with arrangement of elements inside file and folder items

--- a/html/scss/_cards.scss
+++ b/html/scss/_cards.scss
@@ -55,4 +55,11 @@
    display: flex;
    flex-direction: column;
    padding: 1rem;
+
+
+  .card-item-row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
+
