--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -47,7 +47,7 @@
             </button>
             <div class="col">
                 <h6 class="pl-5 mt-2 font-weight-bold">Folders</h6>
-                <div class="text-xs text-light">Use <i class="fas fa-grip-vertical"></i> to drag and drop and sort</div>
+                <h6 class="text-xs text-light">Use <i class="fas fa-grip-vertical"></i> to drag and drop and sort</h6>
             </div>
         </div>
         <div class="card-body" id="folders">
