Fixed issue with deleting files in folder view

--- a/html/templates/folderView-file.html
+++ b/html/templates/folderView-file.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="row no-gutters align-items-center card-item-row">
-                <div class="col mr-2 card-item-details div-file-open">
+                <div class="col mr-2 card-item-details div-file-open" data-id="{id}">
                     <div id="div-filename-{id}" class="text-xs font-weight-bold mb-1">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
                         <code>{date}</code>
