--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -15,6 +15,14 @@
                 </select>
             </div>
 
+            <div class="mb-3">
+                <label for="themeSelect" class="form-label fw-bold">Style</label>
+                <select class="form-select" id="styleSelect">
+                    <option value="default">Default (Flat)</option>
+                    <option value="neomorphism">Neomorphism</option>
+                </select>
+            </div>
+
             <hr> <div class="mb-1">
                  <span class="form-label fw-bold">Mode</span>
             </div>
@@ -38,11 +46,11 @@
                     </label>
                 </div>
             </div>
-             </div>
+        </div>
     </div>
     <div class="card shadow mb-4">
         <div class="card-header py-3 d-flex">
-            <button type="button" id="btn-add-folder" class="btn btn-sm float-left btn-circle">
+            <button type="button" id="btn-add-folder" class="btn btn-sm float-left btn-circle me-2">
                 <i class="fas fa-plus"></i>
             </button>
             <div class="col">
