--- a/html/templates/folderView.html
+++ b/html/templates/folderView.html
@@ -3,7 +3,7 @@
 
     <div class="card shadow mb-4">
         <div class="card-header py-3 d-flex">
-            <button type="button" id="btn-add-file" class="btn btn-sm float-left btn-circle">
+            <button type="button" id="btn-add-file" class="btn btn-sm float-left btn-circle me-2">
                 <i class="fas fa-plus"></i>
                 <div id="div-folderView-path" class="d-none">{path}</div>
             </button>
